--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,21 @@
 *.exe
 *.out
 *.app
+
+Debug
+Release
+Release_gcc_unicode
+DebugUnicode
+*.session
+*.tags
+*.pyc
+bin
+bin/ofMaker
+lib
+*.mk
+*.workspace.session
+*.workspace
+*.workspace.*
+*.project
+*.txt
+*/Makefile
